# makerspace-auth

./: .gitignore  README.md
.allstar/: binary_artifacts.yaml
.github/workflows/: build.yml
contrib/: README.md
contrib/startup-script/: README.md  makerspace-auth.service
docs/: README.md
docs/authboard-v1.0/: BOM.md  Soldering.md
docs/client/: Walkthrough.md
docs/server/: Protocol.md
hardware/: README.md
hardware/pi-bracket-1/: README.md  pibracket.stl  piclip.stl
hardware/pi-hat-1/: Makefile  README.md  (+15 more)
software/: Makefile  README.md  auth_lib.py  findKeyboards.py  lockbox.ini  lockbox.py  main.py  qa.ini  qa.py  requirements-dev.txt  requirements-test.txt  sample_auth_check.sh  sample_deauth.sh  sample_extend.sh  setup.cfg  setup.py  test_qa.py  test_two_button.py  twoButtonExample.py  two_button.ini  two_button.py
software/authbox/: __init__.py  api.py  badgereader_hid_keystroking.py  badgereader_wiegand_gpio.py  compat.py  config.py  fake_evdev_device_for_testing.py  fake_gpio_for_testing.py  gpio_button.py  gpio_buzzer.py  gpio_relay.py  gpio_switch_three.py  gpio_tonal_buzzer.py  test_api.py  test_badgereader_hid_keystroking.py  test_badgereader_wiegand_gpio.py  test_config.py  test_gpio_button.py  test_gpio_buzzer.py  test_gpio_relay.py  test_gpio_switch_three.py  timer.py
software/authbox/tests/: __init__.py  __main__.py  setup_mock_pin_factory.py  test_api.py  test_badgereader_hid_keystroking.py  test_badgereader_wiegand_gpio.py  test_config.py  test_fake_gpio.py  test_gpio_button.py  test_gpio_buzzer.py  test_gpio_relay.py  test_timer.py
(+66 files in other folders)
