[metadata]
name = authbox
description = A framework for makerspace tool/door authz/authn
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache2
url = https://github.com/google/makerspace-auth
platforms = linux

[options]
packages = authbox

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
