[metadata]
name = authbox
description = A framework for makerspace tool/door authz/authn
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache2
url = https://github.com/google/makerspace-auth
platforms = linux

[options]
packages = authbox
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4,!=3.5

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[tox:tox]
envlist = py27, py36, py37

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{27,36,37}: COVERAGE_FILE={envdir}/.coverage

[bdist_wheel]
universal = true

[coverage:run]
include = authbox/*
omit = authbox/tests/*

[coverage:report]
fail_under = 90
show_missing = True
